--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+  <% if (process.env.VUE_APP_DEPLOY_ENV !== 'leyan') { %>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+      <title><%= htmlWebpackPlugin.options.title %></title>
+  <% } %>
+
+  <% if (process.env.VUE_APP_DEPLOY_ENV === 'leyan') { %>
+    <link rel="icon" href="<%= BASE_URL %>favicon_leyan.ico">
+      <title>乐研 API</title>
+  <% } %>
+
+
   </head>
   <body>
     <noscript>
