--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-  <% if (process.env.VUE_APP_DEPLOY_ENV !== 'leyan') { %>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <% if (process.env.VUE_APP_DEPLOY_ENV !== 'ly') { %>
+      <link rel="icon" href="<%= BASE_URL %>favicon.ico">
       <title><%= htmlWebpackPlugin.options.title %></title>
+  <%} else { %>
+      <link rel="icon" href="<%= process.env.VUE_APP_DEPLOY_ENV_ICON %>">
+      <title><%= process.env.VUE_APP_DEPLOY_ENV_TITLE %> </title>
   <% } %>
 
-  <% if (process.env.VUE_APP_DEPLOY_ENV === 'leyan') { %>
-    <link rel="icon" href="<%= BASE_URL %>favicon_leyan.ico">
-      <title>乐研 API</title>
-  <% } %>
 
 
   </head>
