--- a/public/index.html
+++ b/public/index.html
@@ -144,9 +144,9 @@
         #loader-wrapper .load_title span {
             font-weight: normal;
             font-style: italic;
-            font-size: 13px;
-            color: #FFF;
-            opacity: 0.5;
+            font-size: 15px;
+            color: #ffffff;
+            opacity: 0.8;
         }
         .chromeframe {
             margin: 0.2em 0;
