--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
             <div id="loader"></div>
             <div class="loader-section section-left"></div>
             <div class="loader-section section-right"></div>
-            <div class="load_title">正在加载,请耐心等待
+            <div class="load_title">正在加载，请耐心等待！
                 <br>
                 <span>DeepTest.com</span>
             </div>
