--- a/public/index.html
+++ b/public/index.html
@@ -158,9 +158,9 @@
     <div id="app"></div>
     <div class="app-loading">
         <% if(process.env.VUE_APP_DEPLOY_ENV === 'ly') { %>
-            <img src="https://leyanapi-test.nancalcloud.com/upload/images/leyan-api-logo.jpg" class="app-loading-logo" alt="Logo" />
+            <img src="https://leyanapi.nancalcloud.com/upload/images/leyan-api-logo.jpg" class="app-loading-logo" alt="Logo" />
         <% } else { %>
-            <img src="https://leyanapi-test.nancalcloud.com/upload/images/logo.jpg" class="app-loading-logo" alt="Logo" />
+            <img src="https://leyanapi.nancalcloud.com/upload/images/logo.jpg" class="app-loading-logo" alt="Logo" />
         <% } %>
         <div class="app-loading-dots">
             <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
