not to show deeptest logo in loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
         <% if(process.env.VUE_APP_DEPLOY_ENV === 'ly') { %>
             <img src="https://leyanapi.nancalcloud.com/upload/images/leyan-api-logo.jpg" class="app-loading-logo" alt="Logo" />
         <% } else { %>
-            <img src="https://leyanapi.nancalcloud.com/upload/images/logo.jpg" class="app-loading-logo" alt="Logo" />
+<!--            <img src="https://leyanapi.nancalcloud.com/upload/images/logo.jpg" class="app-loading-logo" alt="Logo" />-->
         <% } %>
         <div class="app-loading-dots">
             <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
