--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             padding: 0px;
         }
 
-        .app-loading {
+        #ly-app-loading {
             position: absolute;
             top: 0;
             left: 0;
@@ -39,19 +39,19 @@
             opacity: 1;
         }
 
-        .app-loading.hide {
+        #ly-app-loading.hide {
             opacity: 0;
             z-index: -2;
         }
 
-        .app-loading .dots {
+        #ly-app-loading .dots {
             display: flex;
             padding: 98px;
             justify-content: center;
             align-items: center;
         }
 
-        .app-loading .app-loading-title {
+        #ly-app-loading #ly-app-loading-title {
             display: flex;
             margin-top: 30px;
             font-size: 30px;
@@ -61,7 +61,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
         }
 
-        .app-loading .app-loading-logo {
+        #ly-app-loading #ly-app-loading-logo {
             display: block;
             width: 184px;
             margin: 0 auto;
@@ -71,10 +71,10 @@
         .dot {
             position: relative;
             display: inline-block;
-            width: 48px;
-            height: 48px;
+            width: 24px;
+            height: 24px;
             margin-top: 30px;
-            font-size: 32px;
+            font-size: 20px;
             transform: rotate(45deg);
             box-sizing: border-box;
             animation: antRotate 1.2s infinite linear;
@@ -83,8 +83,8 @@
         .dot i {
             position: absolute;
             display: block;
-            width: 20px;
-            height: 20px;
+            width: 9px;
+            height: 9px;
             background-color: #0065cc;
             border-radius: 100%;
             opacity: 0.3;
@@ -145,7 +145,6 @@
             }
         }
     </style>
-
 </head>
 
 <body>
@@ -154,19 +153,21 @@
         Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
-<div class="app-loading" style="display: none">
+
+<!--全局 loading 控制 -->
+<div id="ly-app-loading">
     <% if (process.env.VUE_APP_DEPLOY_ENV ==='ly' ) { %>
     <img src="<%= process.env.VUE_APP_DEPLOY_ENV_LOADING_ICON %>" class="app-loading-logo" alt="Logo"/>
     <% } %>
-    <div class="app-loading-dots">
+    <div id="ly-app-loading-dots">
         <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
     </div>
-    <div class="app-loading-title"></div>
+    <div id="ly-app-loading-title"></div>
     <script>
-        const titleEl = document.getElementsByClassName('app-loading-title');
+        const titleEl = document.getElementsByClassName('ly-app-loading-title');
         if (titleEl[0] && "<%= process.env.VUE_APP_DEPLOY_ENV%>" === 'ly') {
             titleEl[0].innerHTML =!!window.require ? "<%= process.env.VUE_APP_DEPLOY_ENV_TITLE %>" : location.host;
-        } else {
+        } else if (titleEl[0]){
             titleEl[0].innerHTML = 'DeepTest.com';
         }
     </script>
