--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
             margin: 0px;
             padding: 0px;
         }
-
         #ly-app-loading {
             position: absolute;
             top: 0;
@@ -38,8 +37,12 @@
             transition: all 0.5s ease-in-out;
             opacity: 1;
         }
-
         #ly-app-loading.hide {
+            opacity: 0;
+            z-index: -2;
+        }
+
+        #ly-app-loading.hide #ly-app-loading-dots {
             opacity: 0;
             z-index: -2;
         }
@@ -71,10 +74,10 @@
         .dot {
             position: relative;
             display: inline-block;
-            width: 24px;
-            height: 24px;
+            width: 48px;
+            height: 48px;
             margin-top: 30px;
-            font-size: 20px;
+            font-size: 32px;
             transform: rotate(45deg);
             box-sizing: border-box;
             animation: antRotate 1.2s infinite linear;
@@ -83,8 +86,8 @@
         .dot i {
             position: absolute;
             display: block;
-            width: 9px;
-            height: 9px;
+            width: 20px;
+            height: 20px;
             background-color: #0065cc;
             border-radius: 100%;
             opacity: 0.3;
@@ -138,11 +141,19 @@
                 opacity: 1;
             }
         }
-
         @-webkit-keyframes antSpinMove {
             to {
                 opacity: 1;
             }
+        }
+        .leyan-loading #ly-app-loading-dots{
+            transform: scale(0.42);
+        }
+        .leyan-loading .app-loading-logo{
+            display: none!important;
+        }
+        .leyan-loading #ly-app-loading-title{
+            display: none!important;
         }
     </style>
 </head>
@@ -164,11 +175,18 @@
     </div>
     <div id="ly-app-loading-title"></div>
     <script>
-        const titleEl = document.getElementsByClassName('ly-app-loading-title');
-        if (titleEl[0] && "<%= process.env.VUE_APP_DEPLOY_ENV%>" === 'ly') {
-            titleEl[0].innerHTML =!!window.require ? "<%= process.env.VUE_APP_DEPLOY_ENV_TITLE %>" : location.host;
-        } else if (titleEl[0]){
-            titleEl[0].innerHTML = 'DeepTest.com';
+        const titleEl = document.getElementById('ly-app-loading-title');
+        const loadingEl = document.getElementById('ly-app-loading');
+        if (titleEl && "<%= process.env.VUE_APP_DEPLOY_ENV%>" === 'ly') {
+            titleEl.innerHTML =!!window.require ? "<%= process.env.VUE_APP_DEPLOY_ENV_TITLE %>" : location.host;
+            // 无界环境下，隐藏 loading
+            if(window.__POWERED_BY_WUJIE__ && loadingEl){
+                // loadingEl.classList.add('hide');
+                // 添加乐研 loading
+                loadingEl.classList.add('leyan-loading');
+            }
+        } else if (titleEl){
+            titleEl.innerHTML = 'DeepTest.com';
         }
     </script>
 </div>
