--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
             margin: 0px;
             padding: 0px;
         }
+        body {
+            overflow-y: hidden;
+        }
 
         #ly-app-loading {
             position: absolute;
